--- a/.github/workflows/api-php-action.yml
+++ b/.github/workflows/api-php-action.yml
@@ -25,6 +25,9 @@ jobs:
         id: generate-sdk
         run: ./api-php/build-sdk.ps1
         shell: pwsh
+      - name: Build sample
+        run: ./api-php/build-sample.ps1
+        shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
         run: ./api-php/publish-sdk.ps1
