--- a/.github/workflows/api-python-action.yml
+++ b/.github/workflows/api-python-action.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Generate SDK
         run: ./api-python/build-sdk.ps1
         shell: pwsh
+      - name: Build sample
+        run: ./api-python/build-sample.ps1
+        shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
         run: ./api-python/publish-sdk.ps1
