--- a/ui-expo/sdk/package.json
+++ b/ui-expo/sdk/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build-js": "esbuild index.ts --bundle --platform=node --format=cjs --outdir=dist --target=es2020 --external:react --external:react-native --external:react/jsx-runtime --external:expo-web-browser --external:expo-modules-core",
-    "build-ts": "tsc index.ts --declaration --emitDeclarationOnly --lib es2020 --outDir dist",
+    "build-ts": "tsc index.ts --declaration --emitDeclarationOnly --lib es6 --types node --outDir dist",
     "build": "npm run build-js && npm run build-ts"
   },
   "module": "dist/index.js",
@@ -19,7 +19,6 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
-    "expo-linking": "6.3.1",
     "expo-web-browser": "^13.0.3"
   }
 }
