--- a/ui-expo/sdk/package.json
+++ b/ui-expo/sdk/package.json
@@ -4,7 +4,7 @@
   "description": "Helper methods to launch and capture the results of a Trinsic verification",
   "main": "index.js",
   "scripts": {
-    "build-js": "esbuild index.ts --bundle --platform=node --format=cjs --outdir=dist --target=es2020 --external:react --external:react-native --external:react/jsx-runtime --external:expo-web-browser --external:expo-modules-core",
+    "build-js": "esbuild index.ts --bundle --platform=node --format=cjs --outdir=dist --target=es2020 --external:react --external:react-native --external:react/jsx-runtime --external:expo-web-browser --external:expo-modules-core --external:expo-linking",
     "build-ts": "tsc index.ts --declaration --emitDeclarationOnly --lib es6 --types node --outDir dist",
     "build": "npm run build-js && npm run build-ts"
   },
