--- a/ui-expo/sdk/package.json
+++ b/ui-expo/sdk/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build-js": "esbuild index.ts --bundle --platform=node --format=cjs --outdir=dist --target=es2020 --external:react --external:react-native --external:react/jsx-runtime --external:expo-web-browser --external:expo-modules-core --external:expo-linking",
-    "build-ts": "tsc index.ts --declaration --emitDeclarationOnly --lib es6 --types node --outDir dist",
+    "build-ts": "tsc index.ts --declaration --moduleResolution node --emitDeclarationOnly --lib es6 --types react-native --outDir dist --skipLibCheck",
     "build": "npm run build-js && npm run build-ts"
   },
   "module": "dist/index.js",
