--- a/.github/workflows/api-java-action.yml
+++ b/.github/workflows/api-java-action.yml
@@ -19,6 +19,10 @@ jobs:
           submodules: recursive
           token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: false
+      - uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          java-version: "21"
       - name: Install NPM dependencies
         run: npm ci
       - name: Generate SDK
