--- a/.github/workflows/api-ruby-action.yml
+++ b/.github/workflows/api-ruby-action.yml
@@ -17,6 +17,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install NPM dependencies
         run: npm ci
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.3"
+          bundler-cache: true
       - name: Generate SDK
         run: ./api-ruby/build-sdk.ps1
         shell: pwsh
