--- a/.github/workflows/api-java-action.yml
+++ b/.github/workflows/api-java-action.yml
@@ -19,11 +19,18 @@ jobs:
           submodules: recursive
           token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: false
+      - uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          java-version: "21"
       - name: Install NPM dependencies
         run: npm ci
       - name: Generate SDK
         id: generate-sdk
         run: ./api-java/build-sdk.ps1
+        shell: pwsh
+      - name: Build sample
+        run: ./api-java/build-sample.ps1
         shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
