--- a/.github/workflows/ui-android-action.yml
+++ b/.github/workflows/ui-android-action.yml
@@ -27,6 +27,10 @@ jobs:
         run: |
           cd ./ui-android/sdk
           ./gradlew :library:build
+      - name: Build sample
+        run: |
+          cd ./ui-android/samples
+          ./gradlew build
       - name: Publish SDK
         if: inputs.publish == true
         run: ./ui-android/publish-sdk.ps1
