--- a/.github/workflows/ui-flutter-action.yml
+++ b/.github/workflows/ui-flutter-action.yml
@@ -29,8 +29,8 @@ jobs:
           flutter-version: 3.24.0
       - uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '21'
+          distribution: "temurin"
+          java-version: "21"
       - name: Setup credentials (todo investigate expiration)
         run: |
           mkdir -p $XDG_CONFIG_HOME/dart
