--- a/ui-expo/sdk/package.json
+++ b/ui-expo/sdk/package.json
@@ -19,7 +19,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
-    "expo-linking": "~6.0.0",
-    "expo-web-browser": "~13.0.0"
+    "expo-linking": "^6.3.1",
+    "expo-web-browser": "^13.0.3"
   }
 }
