--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -2,7 +2,7 @@ name: "Renovate Bot"
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 9 * * 1" # "At 09:00 on Monday."
+    - cron: "0 9 * * 1-5" # "At 09:00 every day (Monday-Friday)."
 
 jobs:
   renovate_runner:
