Typecheck React Native sdk and build example

--- a/ui-react-native/sdk/package.json
+++ b/ui-react-native/sdk/package.json
@@ -38,7 +38,7 @@
     "!**/.*"
   ],
   "scripts": {
-    "typecheck": "tsc",
+    "check": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
     "prepare": "bob build"
