--- a/ui-react-native/samples/react_native_sample/ios/react_native_sample/Info.plist
+++ b/ui-react-native/samples/react_native_sample/ios/react_native_sample/Info.plist
@@ -26,10 +26,10 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>id.trinsic.react-native-sample</string>
+			<string>trinsic-ui-example-redirect-scheme-react-native</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>id.trinsic.react-native-sample</string>
+				<string>trinsic-ui-example-redirect-scheme-react-native</string>
 			</array>
 		</dict>
 	</array>
