--- a/.github/workflows/ui-flutter-action.yml
+++ b/.github/workflows/ui-flutter-action.yml
@@ -48,13 +48,7 @@ jobs:
       - name: Run Flutter SDK Tests
         working-directory: ./ui-flutter/sdk
         run: flutter test
-      - name: Build Sample Android App (Local Library)
-        if: steps.changed-files.outputs.sample_pubspec_any_changed == 'false' || inputs.publish == 'true'
-        working-directory: ./ui-flutter
-        run: ./build-sample.ps1 -useLocalLibrary
-        shell: pwsh
-      - name: Build Sample Android App (Published Library)
-        if: steps.changed-files.outputs.sample_pubspec_any_changed == 'true' && inputs.publish != 'true'
+      - name: Build Sample Android App
         working-directory: ./ui-flutter
         run: ./build-sample.ps1
         shell: pwsh
