Add Flutter testbed (#230)

--- a/ui-flutter/sdk/testbed/pubspec.yaml
+++ b/ui-flutter/sdk/testbed/pubspec.yaml
@@ -1,5 +1,5 @@
-name: trinsic_flutter_ui_example
-description: "Demonstrates how to use the trinsic_flutter_ui plugin."
+name: trinsic_flutter_ui_testbed
+description: "Testbed for local deveopment of trinsic_flutter_ui"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -17,7 +17,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  trinsic_flutter_ui: ^0.1.2
+  trinsic_flutter_ui:
+    path: ../
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
