--- a/ui-flutter/sdk/testbed/android/settings.gradle
+++ b/ui-flutter/sdk/testbed/android/settings.gradle
@@ -8,6 +8,7 @@ pluginManagement {
     }()
 
     includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
+    includeBuild("../../android/src")
 
     repositories {
         google()
