--- a/.github/workflows/api-java-action.yml
+++ b/.github/workflows/api-java-action.yml
@@ -30,7 +30,7 @@ jobs:
         run: ./api-java/build-sdk.ps1
         shell: pwsh
       - name: Build sample
-        run: ./api-java/build-sample.ps1
+        run: ./api-java/build-samples.ps1
         shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
