--- a/.github/workflows/api-php-action.yml
+++ b/.github/workflows/api-php-action.yml
@@ -26,7 +26,7 @@ jobs:
         run: ./api-php/build-sdk.ps1
         shell: pwsh
       - name: Build sample
-        run: ./api-php/build-sample.ps1
+        run: ./api-php/build-samples.ps1
         shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
