--- a/.github/workflows/api-ruby-action.yml
+++ b/.github/workflows/api-ruby-action.yml
@@ -25,7 +25,7 @@ jobs:
         run: ./api-ruby/build-sdk.ps1
         shell: pwsh
       - name: Build sample
-        run: ./api-ruby/build-sample.ps1
+        run: ./api-ruby/build-samples.ps1
         shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
