--- a/.github/workflows/ui-web-action.yml
+++ b/.github/workflows/ui-web-action.yml
@@ -24,7 +24,7 @@ jobs:
         run: ./ui-web/build-sdk.ps1
         shell: pwsh
       - name: Build sample
-        run: ./ui-web/build-sample.ps1
+        run: ./ui-web/build-samples.ps1
         shell: pwsh
       - name: Publish ui web SDK
         if: inputs.publish == true
