--- a/.github/workflows/ui-flutter-action.yml
+++ b/.github/workflows/ui-flutter-action.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build_and_publish:
     name: Build and Publish
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
       - name: Get changed files
@@ -31,6 +31,8 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "21"
+      - name: Set up environment variables
+        run: echo "XDG_CONFIG_HOME=$HOME/.config" >> $GITHUB_ENV
       - name: Setup credentials (todo investigate expiration)
         run: |
           mkdir -p $XDG_CONFIG_HOME/dart
@@ -45,17 +47,11 @@ jobs:
           EOF
       - name: Verify credentials
         run: cat $XDG_CONFIG_HOME/dart/pub-credentials.json
-      - name: Run Flutter SDK Tests
-        working-directory: ./ui-flutter/sdk
-        run: flutter test
-      - name: Build Sample Android App
-        working-directory: ./ui-flutter
-        run: ./build-sample.ps1
+      - name: Build SDK
+        run: ./ui-flutter/build-sdk.ps1
         shell: pwsh
-      - name: Publish SDK (dry run)
-        working-directory: ./
-        if: inputs.publish == false
-        run: ./ui-flutter/publish-sdk.ps1 -dryRun
+      - name: Build Samples
+        run: ./ui-flutter/build-samples.ps1
         shell: pwsh
       - name: Publish SDK
         working-directory: ./
