--- a/.github/workflows/ui-android-action.yml
+++ b/.github/workflows/ui-android-action.yml
@@ -23,14 +23,10 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "21"
-      - name: Build library
-        run: |
-          cd ./ui-android/sdk
-          ./gradlew :library:build
+      - name: Build SDK
+        run: ./ui-android/build-sdk.ps1
       - name: Build sample
-        run: |
-          cd ./ui-android/samples
-          ./gradlew build
+        run: ./ui-android/build-samples.ps1
       - name: Publish SDK
         if: inputs.publish == true
         run: ./ui-android/publish-sdk.ps1
