--- a/.github/workflows/ui-android-action.yml
+++ b/.github/workflows/ui-android-action.yml
@@ -25,8 +25,10 @@ jobs:
           java-version: "21"
       - name: Build SDK
         run: ./ui-android/build-sdk.ps1
+        shell: pwsh
       - name: Build sample
         run: ./ui-android/build-samples.ps1
+        shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
         run: ./ui-android/publish-sdk.ps1
