--- a/.github/workflows/ui-flutter-action.yml
+++ b/.github/workflows/ui-flutter-action.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build_and_publish:
     name: Build and Publish
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Get changed files
@@ -31,8 +31,6 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "21"
-      - name: Set up environment variables
-        run: echo "XDG_CONFIG_HOME=$HOME/.config" >> $GITHUB_ENV
       - name: Setup credentials (todo investigate expiration)
         run: |
           mkdir -p $XDG_CONFIG_HOME/dart
