--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,52 +1,37 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "branchPrefix": "mewmba/renovate/",
-  "gitAuthor": "mewmba Renovate Bot <mewmba@trinsic.id>",
-  "repositories": ["trinsic-id/sdk"],
-  "additionalBranchPrefix": "{{manager}}-",
-  "groupName": "trinsic sdk {{manager}} dependencies",
-  "groupSlug": "trinsic sdk",
-  "assignees": ["lucasamonrc"],
-  "reviewers": ["lucasamonrc"],
-  "prHourlyLimit": 0,
-  "ignorePaths": [
-    "ui-android/**",
-    "ui-flutter/**",
-    "ui-react-native/**",
-    "ui-expo/**",
-    "ui-swift/**",
-    "swift/**"
-  ],
-  "ignoreDeps": [
-    "@openapitools/openapi-generator-cli",
-    "esbuild",
-    "typescript",
-    "micromodal",
-    "vite",
-    "express",
-    "@types/node",
-    "nodemon",
-    "ts-node",
-    "ts-node-dev",
-    "dotenv",
-    "httparty",
-    "sinatra",
-    "sinatra-contrib",
-    "rack",
-    "minitest",
-    "rack-test",
-    "fastapi",
-    "pydantic",
-    "load_dotenv",
-    "uvicorn",
-    "slim/slim",
-    "slim/psr7",
-    "vlucas/phpdotenv",
-    "io.javalin:javalin",
-    "org.slf4j:slf4j-simple",
-    "io.github.cdimascio:dotenv-java",
-    "github.com/gofiber/fiber/v2",
-    "github.com/joho/godotenv",
-    "DotNetEnv"
-  ]
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
+	"branchPrefix": "mewmba/renovate/",
+	"gitAuthor": "mewmba Renovate Bot <mewmba@trinsic.id>",
+	"repositories": ["trinsic-id/sdk"],
+	"additionalBranchPrefix": "{{manager}}-",
+	"groupName": "trinsic sdk {{manager}} dependencies",
+	"groupSlug": "trinsic sdk",
+	"assignees": ["lucasamonrc"],
+	"reviewers": ["lucasamonrc"],
+	"prHourlyLimit": 0,
+	"ignorePaths": ["swift/**"],
+	"packageRules": [
+		{
+			"matchPackagePatterns": ["*"],
+			"enabled": false
+		},
+		{
+			"matchPackageNames": [
+				"Trinsic.Api",
+				"github.com/trinsic-id/sdk-go-api",
+				"com.github.trinsic-id:sdk-java-api",
+				"trinsic/api",
+				"Trinsic-Api",
+				"trinsic_api",
+				"@trinsic/api",
+				"com.github.trinsic-id:sdk-android-ui",
+				"@trinsic/expo-ui",
+				"trinsic_flutter_ui",
+				"@trinsic/react-native-ui",
+				"trinsic-ui-ios",
+				"@trinsic/web-ui"
+			],
+			"enabled": true
+		}
+	]
 }
