Renovate swift sample

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -29,6 +29,7 @@
 				"trinsic_flutter_ui",
 				"@trinsic/react-native-ui",
 				"trinsic-ui-ios",
+				"sdk-swift-ui",
 				"@trinsic/web-ui"
 			],
 			"enabled": true
