--- a/ui-web/sdk/package.json
+++ b/ui-web/sdk/package.json
@@ -11,8 +11,8 @@
   "types": "dist/index.d.ts",
   "browser": "dist/index.iife.js",
   "exports": {
-    "import": "./dist/library.esm.js",
-    "require": "./dist/library.iife.js"
+    "import": "./dist/index.esm.js",
+    "require": "./dist/index.iife.js"
   },
   "scripts": {
     "build:esm": "esbuild src/index.ts --bundle --minify --sourcemap --format=esm --outfile=dist/index.esm.js --target=chrome58,firefox57,safari11,edge16",
