--- a/ui-web/samples/package.json
+++ b/ui-web/samples/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "parcel": "^2.12.0",
     "vite": "^5.4.1"
   },
   "dependencies": {
