--- a/ui-web/samples/package.json
+++ b/ui-web/samples/package.json
@@ -13,5 +13,8 @@
   },
   "dependencies": {
     "@trinsic/web-ui": "1.1.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.22.4"
   }
 }
