--- a/ui-web/samples/bundlers/esbuild/package.json
+++ b/ui-web/samples/bundlers/esbuild/package.json
@@ -12,6 +12,6 @@
     "esbuild": "^0.24.0"
   },
   "dependencies": {
-    "@trinsic/web-ui": "1.2.7"
+    "@trinsic/web-ui": "1.2.8-alpha1"
   }
 }
