--- a/ui-web/samples/bundlers/parcel/package.json
+++ b/ui-web/samples/bundlers/parcel/package.json
@@ -12,7 +12,7 @@
   "targets": {
     "default": {
       "engines": {
-        "browsers": "> 0.25%, not dead"
+        "browsers": "> 5%, not dead"
       }
     }
   },
@@ -20,6 +20,6 @@
     "parcel": "^2.12.0"
   },
   "dependencies": {
-    "@trinsic/web-ui": "^1.2.7"
+    "@trinsic/web-ui": "1.2.8-alpha1"
   }
 }
