--- a/ui-web/samples/bundlers/webpack/package.json
+++ b/ui-web/samples/bundlers/webpack/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack serve --open"
+    "start": "webpack && webpack serve --open"
   },
   "author": "",
   "license": "MIT",
@@ -15,6 +15,6 @@
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
-    "@trinsic/web-ui": "1.2.8-alpha2"
+    "@trinsic/web-ui": "1.2.8-alpha3"
   }
 }
