--- a/ui-web/samples/bundlers/rollup/package.json
+++ b/ui-web/samples/bundlers/rollup/package.json
@@ -14,6 +14,7 @@
     "@trinsic/web-ui": "^1.2.8-alpha3"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.3.0",
     "http-server": "^14.1.1",
     "rollup": "^4.22.4"
   }
