--- a/ui-web/samples/package.json
+++ b/ui-web/samples/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.4.1"
+    "vite": "5.4.1"
   },
   "dependencies": {
-    "@trinsic/web-ui": "^1.1.0"
+    "@trinsic/web-ui": "1.1.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.22.4"
   }
 }
