--- a/ui-web/sdk/package.json
+++ b/ui-web/sdk/package.json
@@ -9,10 +9,16 @@
   },
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
-  "browser": "dist/index.iife.js",
+  "main": "dist/index.iife.js",
+  "source": "./dist/index.esm.js",
   "exports": {
     "import": "./dist/index.esm.js",
-    "require": "./dist/index.iife.js"
+    "require": "./dist/index.iife.js",
+    "browser": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.iife.js"
+    },
+    "default": "./dist/index.iife.js"
   },
   "scripts": {
     "build:esm": "esbuild src/index.ts --bundle --minify --sourcemap --format=esm --outfile=dist/index.esm.js --target=chrome58,firefox57,safari11,edge16",
