--- a/ui-web/samples/bundlers/vite/package.json
+++ b/ui-web/samples/bundlers/vite/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@trinsic/web-ui-vite-sample",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "vite",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "vite build",
-    "start": "vite"
-  },
-  "author": "",
-  "license": "MIT",
-  "description": "",
-  "dependencies": {
-    "@trinsic/web-ui": "^1.2.8-alpha3"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.4.8"
+    "typescript": "^5.5.3",
+    "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "@trinsic/web-ui": "^1.2.10"
   }
 }
