--- a/.github/workflows/ui-web-action.yml
+++ b/.github/workflows/ui-web-action.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Show versions
+        run: node --version && npm --version
       - name: Install NPM dependencies
         run: npm ci
       - name: Generate api typescript SDK
