--- a/ui-web/samples/package.json
+++ b/ui-web/samples/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "chokidar '**/*' -i 'node_modules/**' -i 'dist/**' -c 'npm run build'"
   },
   "devDependencies": {
+    "chokidar-cli": "^3.0.0",
     "vite": "5.4.1"
   },
   "dependencies": {
-    "@trinsic/web-ui": "2.0.1"
+    "@trinsic/web-ui": "2.0.1",
+    "micromodal": "^0.4.10",
+    "qrcode": "^1.5.4"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.22.4"
