--- a/api-csharp/samples/Sample/Sample.csproj
+++ b/api-csharp/samples/Sample/Sample.csproj
@@ -9,6 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
-    <PackageReference Include="Trinsic.Api" Version="1.2.0" />
+    <PackageReference Include="Trinsic.Api" Version="2.0.0-alpha3" />
   </ItemGroup>
 </Project>
