--- a/api-typescript/samples/server/package.json
+++ b/api-typescript/samples/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.1",
     "@types/node": "22.3.0",
     "nodemon": "3.1.4",
     "ts-node": "10.9.2",
@@ -18,7 +19,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
-    "@trinsic/api": "1.2.0",
-    "express": "4.19.2"
+    "@trinsic/api": "2.0.0-alpha3",
+    "express": "4.21.2"
   }
 }
