--- a/api-php/samples/server/composer.json
+++ b/api-php/samples/server/composer.json
@@ -10,6 +10,6 @@
     "slim/slim": "^4.14",
     "slim/psr7": "^1.7",
     "vlucas/phpdotenv": "^5.6",
-    "trinsic/api": "1.2.0"
+    "trinsic/api": "2.0.0-alpha3"
   }
 }
