--- a/api-java/samples/server/pom.xml
+++ b/api-java/samples/server/pom.xml
@@ -29,6 +29,31 @@
             <version>6.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>2.15.4</version> <!-- or latest 2.x -->
+        </dependency>
+
+        <!-- Jackson Optional Support -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>2.15.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+            <version>0.2.1</version> <!-- Check latest -->
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -40,7 +65,7 @@
         <dependency>
             <groupId>com.github.trinsic-id</groupId>
             <artifactId>sdk-java-api</artifactId>
-            <version>1.2.0</version>
+            <version>2.0.0-alpha3</version>
         </dependency>
 
         <dependency>
@@ -49,4 +74,8 @@
             <version>3.0.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <sourceDirectory>${project.basedir}/trinsic</sourceDirectory>
+    </build>
 </project>
