--- a/ui-flutter/sdk/android/build.gradle
+++ b/ui-flutter/sdk/android/build.gradle
@@ -41,7 +41,7 @@ android {
     }
 
     dependencies {
-        api("com.github.trinsic-id:sdk-android-ui:1.0.0")
+        api("com.github.trinsic-id:sdk-android-ui:2.0.0-rc1")
         testImplementation("junit:junit:4.13.2")
         testImplementation("org.mockito:mockito-core:5.0.0")
     }
