--- a/ui-react-native/sdk/android/build.gradle
+++ b/ui-react-native/sdk/android/build.gradle
@@ -118,7 +118,7 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  api("com.github.trinsic-id:sdk-android-ui:1.0.0")
+  api("com.github.trinsic-id:sdk-android-ui:2.0.0-rc1")
 }
 
 if (isNewArchitectureEnabled()) {
