--- a/ui-flutter/sdk/pubspec.yaml
+++ b/ui-flutter/sdk/pubspec.yaml
@@ -1,6 +1,6 @@
 name: trinsic_flutter_ui
 description: "Library to invoke the Trinsic Identity Acceptance flow on Android and iOS"
-version: 0.1.2
+version: 2.0.0-rc1
 homepage: https://trinsic.id
 repository: https://github.com/trinsic-id/sdk
 
