--- a/ui-flutter/samples/flutter_sample/pubspec.yaml
+++ b/ui-flutter/samples/flutter_sample/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  trinsic_flutter_ui: ^1.0.0
+  trinsic_flutter_ui: ^2.0.0-rc1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
