--- a/api-csharp/samples/Sample/Sample.csproj
+++ b/api-csharp/samples/Sample/Sample.csproj
@@ -9,9 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\sdk\src\Trinsic.Api\Trinsic.Api.csproj" />
+    <PackageReference Include="Trinsic.Api" Version="2.0.0-alpha4" />
   </ItemGroup>
 </Project>
