--- a/api-typescript/samples/server/package.json
+++ b/api-typescript/samples/server/package.json
@@ -19,7 +19,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
-    "@trinsic/api": "2.0.0-alpha3",
+    "@trinsic/api": "2.0.0",
     "express": "4.21.2"
   }
 }
