--- a/api-typescript/samples/server/package.json
+++ b/api-typescript/samples/server/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@trinsic/api": "2.0.0",
-    "express": "4.21.2"
+    "express": "4.21.2",
+    "express-async-errors": "^3.1.1"
   }
 }
