--- a/api-java/samples/server/pom.xml
+++ b/api-java/samples/server/pom.xml
@@ -85,7 +85,7 @@
                 <version>3.1.0</version>
                 <executions>
                     <execution>
-                        <id>npm-install</id>
+                        <id>npm-ci</id>
                         <phase>generate-resources</phase>
                         <goals>
                             <goal>exec</goal>
@@ -94,7 +94,7 @@
                             <workingDirectory>../../../ui-web/samples</workingDirectory>
                             <executable>npm</executable>
                             <arguments>
-                                <argument>install</argument>
+                                <argument>ci</argument>
                             </arguments>
                         </configuration>
                     </execution>
