--- a/.github/workflows/api-csharp-action.yml
+++ b/.github/workflows/api-csharp-action.yml
@@ -18,11 +18,14 @@ jobs:
       - name: Install NPM dependencies
         run: npm ci
       - name: Generate SDK
-        run: ./api-csharp/build-sdk.sh
+        run: ./api-csharp/build-sdk.ps1
+        shell: pwsh
       - name: Build sample
-        run: ./api-csharp/build-samples.sh
+        run: ./api-csharp/build-samples.ps1
+        shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
-        run: ./api-csharp/publish-sdk.sh
+        run: ./api-csharp/publish-sdk.ps1
+        shell: pwsh
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
