--- a/.github/workflows/api-java-action.yml
+++ b/.github/workflows/api-java-action.yml
@@ -27,12 +27,15 @@ jobs:
         run: npm ci
       - name: Generate SDK
         id: generate-sdk
-        run: ./api-java/build-sdk.sh
+        run: ./api-java/build-sdk.ps1
+        shell: pwsh
       - name: Build sample
-        run: ./api-java/build-samples.sh
+        run: ./api-java/build-samples.ps1
+        shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
-        run: ./api-java/publish-sdk.sh
+        run: ./api-java/publish-sdk.ps1
+        shell: pwsh
         env:
           PAT_GITHUB: ${{ secrets.PAT_GITHUB }}
           PACKAGE_VERSION: ${{ steps.generate-sdk.outputs.trinsic-package-version }}
