--- a/.github/workflows/api-python-action.yml
+++ b/.github/workflows/api-python-action.yml
@@ -18,11 +18,14 @@ jobs:
       - name: Install NPM dependencies
         run: npm ci
       - name: Generate SDK
-        run: ./api-python/build-sdk.sh
+        run: ./api-python/build-sdk.ps1
+        shell: pwsh
       - name: Build sample
-        run: ./api-python/build-samples.sh
+        run: ./api-python/build-samples.ps1
+        shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
-        run: ./api-python/publish-sdk.sh
+        run: ./api-python/publish-sdk.ps1
+        shell: pwsh
         env:
           PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
