--- a/.github/workflows/api-ruby-action.yml
+++ b/.github/workflows/api-ruby-action.yml
@@ -22,11 +22,14 @@ jobs:
           ruby-version: "3.3"
           bundler-cache: true
       - name: Generate SDK
-        run: ./api-ruby/build-sdk.sh
+        run: ./api-ruby/build-sdk.ps1
+        shell: pwsh
       - name: Build sample
-        run: ./api-ruby/build-samples.sh
+        run: ./api-ruby/build-samples.ps1
+        shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
-        run: ./api-ruby/publish-sdk.sh
+        run: ./api-ruby/publish-sdk.ps1
+        shell: pwsh
         env:
           RUBYGEMS_API_TOKEN: ${{ secrets.RUBYGEMS_API_TOKEN }}
