--- a/.github/workflows/ui-android-action.yml
+++ b/.github/workflows/ui-android-action.yml
@@ -24,12 +24,15 @@ jobs:
           distribution: "temurin"
           java-version: "21"
       - name: Build SDK
-        run: ./ui-android/build-sdk.sh
+        run: ./ui-android/build-sdk.ps1
+        shell: pwsh
       - name: Build sample
-        run: ./ui-android/build-samples.sh
+        run: ./ui-android/build-samples.ps1
+        shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
-        run: ./ui-android/publish-sdk.sh
+        run: ./ui-android/publish-sdk.ps1
+        shell: pwsh
         env:
           PAT_GITHUB: ${{ secrets.PAT_GITHUB }}
           SDK_REPOSITORY_PATH: ${{ github.repository }}
