--- a/.github/workflows/ui-flutter-action.yml
+++ b/.github/workflows/ui-flutter-action.yml
@@ -46,10 +46,13 @@ jobs:
       - name: Verify credentials
         run: cat $XDG_CONFIG_HOME/dart/pub-credentials.json
       - name: Build SDK
-        run: ./ui-flutter/build-sdk.sh
+        run: ./ui-flutter/build-sdk.ps1
+        shell: pwsh
       - name: Build Samples
-        run: ./ui-flutter/build-samples.sh
+        run: ./ui-flutter/build-samples.ps1
+        shell: pwsh
       - name: Publish SDK
         working-directory: ./
         if: inputs.publish == true
-        run: ./ui-flutter/publish-sdk.sh
+        run: ./ui-flutter/publish-sdk.ps1
+        shell: pwsh
