--- a/.github/workflows/ui-swift-release.yml
+++ b/.github/workflows/ui-swift-release.yml
@@ -16,7 +16,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: false
       - name: Publish SDK
-        run: ./ui-swift/publish-sdk.sh
+        run: ./ui-swift/publish-sdk.ps1
+        shell: pwsh
         env:
           PAT_GITHUB: ${{ secrets.PAT_GITHUB }}
           SDK_REPOSITORY_PATH: ${{ github.repository }}
