--- a/.github/workflows/api-java-action.yml
+++ b/.github/workflows/api-java-action.yml
@@ -37,6 +37,6 @@ jobs:
         run: ./api-java/publish-sdk.ps1
         shell: pwsh
         env:
-          PAT_GITHUB: ${{ secrets.PAT_GITHUB }}
+          MEWMBA_GIT_PUBLISH_TOKEN: ${{ secrets.MEWMBA_GIT_PUBLISH_TOKEN }}
           PACKAGE_VERSION: ${{ steps.generate-sdk.outputs.trinsic-package-version }}
           SDK_REPOSITORY_PATH: ${{ github.repository }}
