--- a/.github/workflows/api-php-action.yml
+++ b/.github/workflows/api-php-action.yml
@@ -33,6 +33,6 @@ jobs:
         run: ./api-php/publish-sdk.ps1
         shell: pwsh
         env:
-          PAT_GITHUB: ${{ secrets.PAT_GITHUB }}
+          MEWMBA_GIT_PUBLISH_TOKEN: ${{ secrets.MEWMBA_GIT_PUBLISH_TOKEN }}
           PACKAGE_VERSION: ${{ steps.generate-sdk.outputs.trinsic-package-version }}
           SDK_REPOSITORY_PATH: ${{ github.repository }}
