--- a/.github/workflows/ui-android-action.yml
+++ b/.github/workflows/ui-android-action.yml
@@ -34,5 +34,5 @@ jobs:
         run: ./ui-android/publish-sdk.ps1
         shell: pwsh
         env:
-          PAT_GITHUB: ${{ secrets.PAT_GITHUB }}
+          MEWMBA_GIT_PUBLISH_TOKEN: ${{ secrets.MEWMBA_GIT_PUBLISH_TOKEN }}
           SDK_REPOSITORY_PATH: ${{ github.repository }}
